style: fix footer z-index to bring text to front and center title on folha de rosto

--- a/index.css
+++ b/index.css
@@ -246,6 +246,7 @@ body {
 .freq-cover-bottom {
   padding: 20px 50px 0;
   position: relative;
+  z-index: 10;
 }
 .freq-cover-bottom-project {
   font-size: 13px;
